--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
 
+  <!-- Preview -->
   <meta name="description" content="Recipes are an integral part of the human lifestyle dictating the diet and nutrition. Our aim is to help chefs with the daunting task of coming up with recipes which might be unconventional but offer an amalgam of ingredients that could result in a new and genuine recipe." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta property="og:title" content="RatatouilleGen - AI Recipe Generator" />
@@ -31,7 +32,6 @@
   <meta name="twitter:image" content="https://cosylab.iiitd.edu.in/ratatouillegen/og-image.png" />
   <meta name="twitter:image:alt" content="AI-Generated Recipes using #Ratatouillegen." />
   <link rel="icon" href="https://cosylab.iiitd.edu.in/assets/images/cosylab_logo.png" />
-  <!-- Test End -->
 
   <!-- Tailwind CSS -->
   <!-- <link href="./output.css" rel="stylesheet" /> -->
